Minor cleanup : todo: more cleanup?

--- a/Homepage.csproj
+++ b/Homepage.csproj
@@ -94,30 +94,26 @@
     <Compile Include="Controllers\NavigationController.cs" />
     <Compile Include="Controllers\RecipesController.cs" />
     <Compile Include="Controllers\WishlistController.cs" />
-    <Compile Include="Helpers\PageElements.cs" />
+    <Compile Include="Code\Helpers\PageElements.cs" />
     <Compile Include="Models\NavLinkItem.cs" />
-    <Compile Include="Models\WAF\Homepage\ControlPanel.cs" />
-    <Compile Include="Models\WAF\Homepage\Frontpage.cs" />
-    <Compile Include="Models\WAF\Homepage\NavbarItem.cs" />
-    <Compile Include="Models\WAF\Homepage\PageWithBackground.cs" />
     <Compile Include="Models\WAF\Homepage\Recipes\FoodCategory.cs" />
     <Compile Include="Models\WAF\Homepage\Recipes\Ingredient.cs" />
     <Compile Include="Models\WAF\Homepage\Recipes\IngredientRecipe.cs" />
     <Compile Include="Models\WAF\Homepage\Recipes\Recipe.cs" />
+    <Compile Include="Models\WAF\Homepage\Site\ControlPanel.cs" />
+    <Compile Include="Models\WAF\Homepage\Site\Frontpage.cs" />
+    <Compile Include="Models\WAF\Homepage\Site\NavbarItem.cs" />
+    <Compile Include="Models\WAF\Homepage\Site\PageWithBackground.cs" />
     <Compile Include="Models\WAF\Homepage\Wishlist\WishlistCategory.cs" />
     <Compile Include="Models\WAF\Homepage\Wishlist\WishlistItem.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\ControlPanel.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\Frontpage.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\Ingredient.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\IngredientRecipe.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\NavbarItem.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\PageWithBackground.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\Recipe.cs" />
-    <Compile Include="Models\WAF_Custom\Homepage\Recipes\FoodCategories.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Recipes\FoodCategory.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Recipes\Ingredient.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Recipes\IngredientRecipe.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Recipes\Recipe.cs" />
+    <Compile Include="Models\WAF_Custom\Homepage\Site\ControlPanel.cs" />
+    <Compile Include="Models\WAF_Custom\Homepage\Site\Frontpage.cs" />
+    <Compile Include="Models\WAF_Custom\Homepage\Site\NavbarItem.cs" />
+    <Compile Include="Models\WAF_Custom\Homepage\Site\PageWithBackground.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Wishlist\WishlistCategory.cs" />
     <Compile Include="Models\WAF_Custom\Homepage\Wishlist\WishlistItem.cs" />
     <Compile Include="ViewModels\NavigationViewModel.cs" />
@@ -906,8 +902,6 @@
     <Content Include="WAF\ClientScripts\jquery-ui-1.9.0.custom\jquery-ui-1.9.0.custom\js\jquery-ui-1.9.0.custom.js" />
     <Content Include="WAF\ClientScripts\jquery-ui-1.9.0.custom\jquery-ui-1.9.0.custom\js\jquery-ui-1.9.0.custom.min.js" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Helpers\MenuHelperNOTUSED.cs" />
-    <Compile Include="Helpers\Strings.cs" />
     <Compile Include="Models\WAF\ODataService.cs" />
     <Compile Include="WAF\Edit\Main\PreviewControls.aspx.designer.cs">
       <DependentUpon>PreviewControls.aspx</DependentUpon>
